Serious interface upgrades, since im that good. Reformatted all parameters to single-line

--- a/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
+++ b/SimTECH/SimTECH/Pages/Factors/ManufacturerEditor.razor
@@ -31,10 +31,8 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? EditDialog { get; set; }
-    [Parameter]
-    public Manufacturer? Manufacturer { get; set; }
+    [CascadingParameter] protected MudDialogInstance? EditDialog { get; set; }
+    [Parameter] public Manufacturer? Manufacturer { get; set; }
 
     private EditManufacturerModel Model;
 
