--- a/SimTECH/SimTECH/Pages/Racing/Qualy/MudTdCutoffStyled.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualy/MudTdCutoffStyled.razor
@@ -3,16 +3,11 @@
 </MudTd>
 
 @code {
-    [Parameter]
-    public RenderFragment? ChildContent { get; set; }
-    [Parameter, EditorRequired]
-    public int Position { get; set; }
-    [Parameter]
-    public int ProgressLimit { get; set; }
-    [Parameter]
-    public int EntryLimit { get; set; }
-    [Parameter]
-    public string Class { get; set; }
+    [Parameter] public RenderFragment? ChildContent { get; set; }
+    [Parameter, EditorRequired] public int Position { get; set; }
+    [Parameter] public int ProgressLimit { get; set; }
+    [Parameter] public int EntryLimit { get; set; }
+    [Parameter] public string Class { get; set; }
 
     private string _styles
     {
