--- a/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
+++ b/SimTECH/SimTECH/Pages/Racing/RaceWeek.razor
@@ -9,63 +9,79 @@
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="raceweek-container">
     @if (!loading)
     {
-        <MudGrid>
-            <MudItem xs="3">
-                <MudPaper Class="pa-4 mud-height-full">
-                    <MudStack AlignItems="AlignItems.Center" Class="mud-height-full">
-                        <ScreenshotButton TargetId="raceweek-container" />
-                        <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
-
-                        <MudStack Row="true" AlignItems="AlignItems.Center">
-                            <MudIcon Icon="@Model.Race.Climate.Icon" />
-                            <MudText>@Model.Race.Climate.Terminology</MudText>
-                        </MudStack>
-
-                        @if (Model.TrackTraits?.Any() == true)
-                        {
-                            <MudList>
-                                <MudListSubheader>Circuit traits</MudListSubheader>
-                                @foreach (var trait in Model.TrackTraits)
-                                {
-                                    <MudListItem>
-                                        <MudStack Spacing="0">
-                                            <MudText Typo="Typo.subtitle1">@trait.Name</MudText>
-                                            <MudDivider />
-                                            <MudText>@trait.Description</MudText>
-                                        </MudStack>
-                                    </MudListItem>
-                                }
-                            </MudList>
-                        }
-
-                        <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined" VerticalAlign="true" Class="mt-2 mud-width-full">
+        <MudGrid Spacing="1">
+            <MudItem xs="12">
+                <MudPaper Height="60px" Class="pa-2">
+                    <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center">
+                        <MudButtonGroup Color="Color.Secondary" Variant="Variant.Outlined">
                             @if (Model.Race.State == State.Active)
                             {
-                                <MudButton FullWidth="true" OnClick="GoToPractice">Practice</MudButton>
-                                <MudButton FullWidth="true" OnClick="GoToQualifying">Qualifying</MudButton>
+                                <MudButton OnClick="GoToPractice">Practice</MudButton>
+                                <MudButton OnClick="GoToQualifying">Qualifying</MudButton>
                             }
                             else if (Model.Race.State != State.Concept)
                             {
-                                <MudButton FullWidth="true" OnClick="GoToRace">Race</MudButton>
+                                <MudButton OnClick="GoToRace">Race</MudButton>
                             }
                         </MudButtonGroup>
+                        <MudText Typo="Typo.h3">@Model.Race.Name</MudText>
+                        <ScreenshotButton TargetId="raceweek-container" />
                     </MudStack>
+                </MudPaper>
+            </MudItem>
+            <MudItem xs="3">
+                <MudPaper Class="pa-4 mud-height-full">
+                    <MudText Typo="Typo.h5">Track information</MudText>
+                    <MudText Typo="Typo.body2" Color="Color.Error">This section is pretty ugly, mate</MudText>
+
+                    <MudListExtended T="string">
+                        <MudListItemExtended T="string" SecondaryText="Country">
+                            <CountryNamedFlag Code="@Model.Race.Track.Country" Size="FlagSize.Normal" Reverse="true" />
+                        </MudListItemExtended>
+                        <MudListItemExtended T="string" Text="@Model.Race.Climate.Terminology" SecondaryText="Weather">
+                            <MudIcon Icon="@Model.Race.Climate.Icon" />
+                            <MudText>@Model.Race.Climate.Terminology</MudText>
+                        </MudListItemExtended>
+                        <MudListItemExtended T="string" Text="@($"{Model.Race.Track.Length}km")" SecondaryText="Length" />
+                        <MudListItemExtended T="string" Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")" SecondaryText="Laps" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString("F2")" SecondaryText="Aero modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString("F2")" SecondaryText="Chassis modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString("F2")" SecondaryText="Powertrain modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString("F2")" SecondaryText="Qualifying modifier" />
+                        <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString("F2")" SecondaryText="Defense modifier" />
+                    </MudListExtended>
+
+                    @if (Model.TrackTraits?.Any() == true)
+                    {
+                        <MudText Typo="Typo.subtitle1">Circuit traits</MudText>
+                        <MudList>
+                            @foreach (var trait in Model.TrackTraits)
+                            {
+                                <MudListItem>
+                                    <MudStack Spacing="0">
+                                        <MudText Typo="Typo.subtitle2">@trait.Name</MudText>
+                                        <MudDivider />
+                                        <MudText Typo="Typo.body2">@trait.Description</MudText>
+                                    </MudStack>
+                                </MudListItem>
+                            }
+                        </MudList>
+                    }
                 </MudPaper>
             </MudItem>
             <MudItem xs="6">
                 <MudPaper Class="pa-4 mud-height-full">
-                    <MudTable Items="@Model.RaceWeekDrivers.OrderBy(e => e.Grid)" Dense="true" id="race-week-grid">
+                    <MudTable Items="@Model.RaceWeekDrivers.OrderBy(e => e.Grid)" Dense="true">
                         <ToolBarContent>
-                            <MudText Typo="Typo.h5">Grid</MudText>
-                            <MudSpacer />
-                            <ScreenshotButton TargetId="race-week-grid" />
+                            <MudText Typo="Typo.h5">Starting grid</MudText>
                         </ToolBarContent>
                         <HeaderContent>
                             <MudTh>Grid</MudTh>
+                            <MudTh Class="pa-0" Style="width: 5px"></MudTh>
                             <MudTh>Name</MudTh>
+                            <MudTh Class="number-col">No.</MudTh>
                             <MudTh>Team</MudTh>
-                            <MudTh Class="number-col">Supp</MudTh>
-                            <MudTh>PEN.</MudTh>
+                            <MudTh Class="number-col">SUPP</MudTh>
                             <MudTh>Tyre</MudTh>
                         </HeaderContent>
                         <RowTemplate>
@@ -76,23 +92,32 @@
                                 }
                                 else
                                 {
-                                    <MudText Typo="Typo.h6" Style="@(ViewHelper.SetTextNumberStyle(context.Colour, context.Accent))">@context.Grid</MudText>
+                                    @if (context.Penalty.HasValue)
+                                    {
+                                        <MudBadge Content="@($"+{context.Penalty.Value}")" Color="Color.Dark" Origin="Origin.CenterRight" BadgeClass="ml-1">
+                                            <DriverPosition Number="@context.Grid" />
+                                        </MudBadge>
+                                    }
+                                    else
+                                    {
+                                        <DriverPosition Number="@context.Grid" />
+                                    }
                                 }
+                            </MudTd>
+                            <MudTd Class="pa-0">
+                                <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
                             </MudTd>
                             <MudTd>
                                 <MudText>@context.FullName</MudText>
+                            </MudTd>
+                            <MudTd Class="number-col">
+                                <NumberDisplay Colour="@context.Colour" Accent="@context.Accent">@context.Number</NumberDisplay>
                             </MudTd>
                             <MudTd>
                                 <MudText>@context.TeamName</MudText>
                             </MudTd>
                             <MudTd Class="number-col" Style="@ViewHelper.SetFullColourstyle(context.ManufacturerColour, context.ManufacturerAccent)">
                                 <MudText Typo="Typo.caption">@context.ManufacturerName.ElementAt(0)</MudText>
-                            </MudTd>
-                            <MudTd>
-                                @if (context.Penalty.HasValue)
-                                {
-                                    <MudText>+@(context.Penalty.Value)</MudText>
-                                }
                             </MudTd>
                             <MudTd>
                                 <MudLink OnClick="@(async () => await PickStrategy(context.ResultId))">
@@ -107,24 +132,7 @@
             </MudItem>
             <MudItem xs="3">
                 <MudPaper Class="pa-4 mud-height-full">
-                    <MudText Typo="Typo.h5">Track information</MudText>
-                    <MudText Typo="Typo.body2" Color="Color.Error">This section is pretty ugly, mate</MudText>
-
-                    <MudListExtended T="string">
-                        <MudListItemExtended T="string" SecondaryText="Country">
-                            <CountryNamedFlag Code="@Model.Race.Track.Country" Size="FlagSize.Normal" Reverse="true" />
-                        </MudListItemExtended>
-                        <MudListItemExtended T="string" Text="@Model.Race.Climate.Terminology" SecondaryText="Weather">
-                            <MudIcon Icon="@Model.Race.Climate.Icon" />
-                        </MudListItemExtended>
-                        <MudListItemExtended T="string" Text="@($"{Model.Race.Track.Length}Km")" SecondaryText="Length" />
-                        <MudListItemExtended T="string" Text="@($"{NumberHelper.CalcLapCount(Model.Race.RaceLength, Model.Race.Track.Length)}")" SecondaryText="Laps" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.AeroMod.ToString("F2")" SecondaryText="Aero modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.ChassisMod.ToString("F2")" SecondaryText="Chassis modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.PowerMod.ToString("F2")" SecondaryText="Powertrain modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.QualifyingMod.ToString("F2")" SecondaryText="Qualifying modifier" />
-                        <MudListItemExtended T="double" Text="@Model.Race.Track.DefenseMod.ToString("F2")" SecondaryText="Defense modifier" />
-                    </MudListExtended>
+                    <MudText Typo="Typo.body2" Color="Color.Error">Wtf am I going to put here?</MudText>
                 </MudPaper>
             </MudItem>
         </MudGrid>
