--- a/SimTECH/SimTECH/Pages/Racing/TyrePicker.razor
+++ b/SimTECH/SimTECH/Pages/Racing/TyrePicker.razor
@@ -60,14 +60,11 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? PickerDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? PickerDialog { get; set; }
 
-    [Parameter]
-    public long ResultId { get; set; }
+    [Parameter] public long ResultId { get; set; }
 
-    [Parameter]
-    public List<Tyre> Tyres { get; set; }
+    [Parameter] public List<Tyre> Tyres { get; set; }
 
     private int advanceDistance = 10;
 
