--- a/SimTECH/SimTECH/Pages/Season/AddRaces.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddRaces.razor
@@ -138,19 +138,13 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? RaceDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? RaceDialog { get; set; }
 
-    [Parameter]
-    public List<Track> Tracks { get; set; }
-    [Parameter]
-    public long SeasonId { get; set; }
-    [Parameter]
-    public int OffsetRound { get; set; }
-    [Parameter]
-    public int DefaultRaceLength { get; set; }
-    [Parameter]
-    public List<Climate> Climates { get; set; }
+    [Parameter] public List<Track> Tracks { get; set; }
+    [Parameter] public long SeasonId { get; set; }
+    [Parameter] public int OffsetRound { get; set; }
+    [Parameter] public int DefaultRaceLength { get; set; }
+    [Parameter] public List<Climate> Climates { get; set; }
 
     private MudDropContainer<EditRaceModel> reorderContainer;
 
