--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddDrivers.razor
@@ -30,11 +30,9 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
-    [Parameter, EditorRequired]
-    public int Year { get; set; }
+    [Parameter, EditorRequired] public int Year { get; set; }
 
     List<Driver> Drivers;
 
