--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddEngines.razor
@@ -19,8 +19,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
     List<Engine> Engines { get; set; }
 
