--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AddTeams.razor
@@ -20,8 +20,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
     List<Team> Teams;
 
