--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignTeamEngines.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Steps/AssignTeamEngines.razor
@@ -44,8 +44,7 @@
 </MudContainer>
 
 @code {
-    [CascadingParameter]
-    public AddEntrantsModel Model { get; set; }
+    [CascadingParameter] public AddEntrantsModel Model { get; set; }
 
     MudDropContainer<EditSeasonTeamModel> dropperTeams;
 
