--- a/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/EntrantWizard/Wizard.razor
@@ -115,8 +115,7 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public long SeasonId { get; set; }
+    [Parameter] public long SeasonId { get; set; }
 
     public AddEntrantsModel Model { get; set; } = new();
     public Season Season { get; set; }
