--- a/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
+++ b/SimTECH/SimTECH/Pages/Season/SeasonEditor.razor
@@ -117,12 +117,9 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? SeasonDialog { get; set; }
-    [Parameter]
-    public EditSeasonModel Model { get; set; }
-    [Parameter]
-    public List<League> Leagues { get; set; }
+    [CascadingParameter] protected MudDialogInstance? SeasonDialog { get; set; }
+    [Parameter] public EditSeasonModel Model { get; set; }
+    [Parameter] public List<League> Leagues { get; set; }
 
     private EditPointAllotmentModel allotmentBackup;
 
