--- a/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/EngineEditor.razor
@@ -14,11 +14,9 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? EngineDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? EngineDialog { get; set; }
 
-    [Parameter]
-    public Engine? Engine { get; set; }
+    [Parameter] public Engine? Engine { get; set; }
 
     private EditEngineModel Model;
 
