--- a/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
+++ b/SimTECH/SimTECH/Pages/Setup/TraitEditor.razor
@@ -76,11 +76,9 @@
 </MudDialog>
 
 @code {
-    [CascadingParameter]
-    protected MudDialogInstance? TraitDialog { get; set; }
+    [CascadingParameter] protected MudDialogInstance? TraitDialog { get; set; }
 
-    [Parameter]
-    public Trait? Trait { get; set; }
+    [Parameter] public Trait? Trait { get; set; }
 
     private MudChip? entrantChip;
 
