--- a/SimTECH/SimTECH/Pages/Racing/PostRace.razor
+++ b/SimTECH/SimTECH/Pages/Racing/PostRace.razor
@@ -9,11 +9,11 @@
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4" id="postrace-container">
     @if (!loading)
     {
-        <MudGrid>
+        <MudGrid Spacing="1">
             <MudItem xs=12>
                 <MudPaper Elevation="15" Height="200px" Class="pa-4">
                     <MudStack Row="true" AlignItems="AlignItems.Center">
-                        <MudText>E</MudText>
+                        <span></span>
 
                         <MudSpacer />
 
@@ -33,7 +33,7 @@
             </MudItem>
             <MudItem xs="4">
                 <MudPaper Class="mud-height-full">
-                    
+                    <MudText Typo="Typo.body2" Color="Color.Error">Wtf am I going to put here?</MudText>
                 </MudPaper>
             </MudItem>
             <MudItem xs="4">
@@ -80,7 +80,7 @@
                 <MudStack Class="mud-height-full">
                     <MudPaper Height="50%">
                         <MudText Typo="Typo.h5">Race incidents</MudText>
-                        <MudSimpleTable>
+                        <MudSimpleTable Dense="true" Class="extra-dense">
                             <thead>
                                 <tr>
                                     <th>Name</th>
