--- a/SimTECH/SimTECH/Pages/Season/Overview.razor
+++ b/SimTECH/SimTECH/Pages/Season/Overview.razor
@@ -136,10 +136,8 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public long SeasonId { get; set; }
-    [Parameter]
-    public int TabIndex { get; set; }
+    [Parameter] public long SeasonId { get; set; }
+    [Parameter] public int TabIndex { get; set; }
 
     public Season? Season { get; set; }
     public Race? NextRace { get; set; }
