--- a/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
+++ b/SimTECH/SimTECH/Pages/Season/PartsUsage.razor
@@ -66,8 +66,7 @@
 </MudContainer>
 
 @code {
-    [Parameter]
-    public long SeasonId { get; set; }
+    [Parameter] public long SeasonId { get; set; }
 
     List<Incident> Incidents;
     List<PartsUsedByDriver> PartsPerDriver;
