--- a/SimTECH/SimTECH/Pages/Season/Settings.razor
+++ b/SimTECH/SimTECH/Pages/Season/Settings.razor
@@ -68,8 +68,7 @@
 </MudGrid>
 
 @code {
-    [CascadingParameter]
-    public Season Season { get; set; }
+    [CascadingParameter] public Season Season { get; set; }
 
     async Task UpdateSeason()
     {
