--- a/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/DriverDetailStat.razor
@@ -7,32 +7,35 @@
     <DialogContent>
         <MudContainer MaxWidth="MaxWidth.ExtraLarge">
             <MudPaper Width="1100px">
-                <MudStack Row="true" Justify="Justify.SpaceBetween" Class="mud-width-full">
-                    <MudPaper>
-                        <MudSelect T="Driver"
-                                   @bind-Value="@selectedDriver"
-                                   Label="Driver"
-                                   Class="field-lg">
-                            @foreach (var driver in Drivers)
-                            {
-                                <MudSelectItem Value="@driver">
-                                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
-                                        <MudText>@driver.FullName</MudText>
-                                        <MudSpacer />
-                                        <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
-                                    </MudStack>
-                                </MudSelectItem>
-                            }
-                        </MudSelect>
-                    </MudPaper>
-                    <MudPaper>
-                        <MudText Color="Color.Secondary">This area can optionally be used to further specify the detail data</MudText>
-                    </MudPaper>
-                </MudStack>
-
-                @if (selectedDriver != null)
+                @if (!loading)
                 {
-                    <MudText>Selected is @(selectedDriver.FullName)</MudText>
+                    <MudStack Row="true" Justify="Justify.SpaceBetween" Class="mud-width-full">
+                        <MudPaper>
+                            <MudSelect T="Driver"
+                            @bind-Value="@selectedDriver"
+                                       Label="Driver"
+                                       Class="field-lg">
+                                @foreach (var driver in Drivers)
+                                {
+                                    <MudSelectItem Value="@driver">
+                                        <MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
+                                            <MudText>@driver.FullName</MudText>
+                                            <MudSpacer />
+                                            <CountryFlag Code="@driver.Country" Size="FlagSize.Tiny" />
+                                        </MudStack>
+                                    </MudSelectItem>
+                                }
+                            </MudSelect>
+                        </MudPaper>
+                        <MudPaper>
+                            <MudText Color="Color.Secondary">This area can optionally be used to further specify the detail data</MudText>
+                        </MudPaper>
+                    </MudStack>
+
+                    @if (selectedDriver != null)
+                    {
+                        <MudText>Selected is @(selectedDriver.FullName)</MudText>
+                    }
                 }
             </MudPaper>
         </MudContainer>
@@ -46,10 +49,12 @@
 
     Driver? selectedDriver;
 
-    bool loadedDriverData = false;
+    bool loading = true;
 
     protected override async Task OnInitializedAsync()
     {
         Drivers = await _driverService.GetDrivers();
+
+        loading = false;
     }
 }
