--- a/SimTECH/SimTECH/Pages/Statistics/Stats.razor
+++ b/SimTECH/SimTECH/Pages/Statistics/Stats.razor
@@ -7,11 +7,13 @@
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-4">
     <MudGrid>
         <MudItem xs=12>
-            <MudPaper Elevation="15" Height="60px" Class="d-flex flex-row justify-center pa-4">
-                <MudText Typo="Typo.h3">Statistics</MudText>
+            <MudPaper Elevation="15" Height="60px" Class="pa-2">
+                <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center">
+                    <MudText Typo="Typo.h3">Statistics</MudText>
+                </MudStack>
             </MudPaper>
         </MudItem>
-        <MudItem xs="4">
+        @*<MudItem xs="4">
             <MudCard>
                 <MudCardHeader>
                     <CardHeaderContent>
@@ -22,7 +24,7 @@
                     <MudText Typo="Typo.body2">Get detailed statistics about the results of a driver.</MudText>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="ShowDriverCompare">Go to</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="ShowDriverDetail">Show</MudButton>
                 </MudCardActions>
             </MudCard>
         </MudItem>
@@ -37,7 +39,7 @@
                     <MudText Typo="Typo.body2">Compare statistics between two drivers.</MudText>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="ShowDriverCompare">Go to</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="ShowDriverCompare">Show</MudButton>
                 </MudCardActions>
             </MudCard>
         </MudItem>
@@ -52,14 +54,35 @@
                     <MudText Typo="Typo.body2">???</MudText>
                 </MudCardContent>
                 <MudCardActions>
-                    <MudButton Variant="Variant.Text" Color="Color.Secondary">Go to</MudButton>
+                    <MudButton Variant="Variant.Text" Color="Color.Secondary">Show</MudButton>
                 </MudCardActions>
             </MudCard>
-        </MudItem>
+        </MudItem>*@
+
+        @foreach (var topic in Topics)
+        {
+            <MudItem xs="4">
+                <MudCard>
+                    <MudCardHeader>
+                        <CardHeaderContent>
+                            <MudText Typo="Typo.body1">@topic.Title</MudText>
+                        </CardHeaderContent>
+                    </MudCardHeader>
+                    <MudCardContent>
+                        <MudText Typo="Typo.body2">@topic.Description</MudText>
+                    </MudCardContent>
+                    <MudCardActions>
+                        <MudButton Variant="Variant.Text" Color="Color.Secondary" OnClick="@topic.GraphCall">Show</MudButton>
+                    </MudCardActions>
+                </MudCard>
+            </MudItem>
+        }
     </MudGrid>
 </MudContainer>
 
 @code {
+    List<StatTopic> Topics = new();
+
     protected override void OnInitialized()
     {
         _bread.Reset();
@@ -68,8 +91,36 @@
             new BreadcrumbItem("Home", href: ""),
             new BreadcrumbItem("Stats", href: "stats", disabled: true),
         });
+
+        LoadTopics();
+    }
+
+    private void LoadTopics()
+    {
+        var driverDetail = new StatTopic
+            {
+                Title = "Driver details",
+                Description = "Get detailed statistics about the results of a driver.",
+                GraphCall = ShowDriverDetail
+            };
+        var driverCompare = new StatTopic
+            {
+                Title = "Compare drivers",
+                Description = "Compare statistics between two drivers.",
+                GraphCall = ShowDriverCompare
+            };
+
+        Topics.Add(driverDetail);
+        Topics.Add(driverCompare);
     }
 
     async Task ShowDriverDetail() => _ = await DialogService.ShowAsync<DriverDetailStat>("Driver detail data");
     async Task ShowDriverCompare() => _ = await DialogService.ShowAsync<DriverCompareStat>("Compare drivers");
+
+    internal class StatTopic
+    {
+        public string Title { get; set; }
+        public string Description { get; set; }
+        public Func<Task> GraphCall { get; set; }
+    }
 }
