Made a few steps in preparing to store practice and qualifying results. Also store whether a driver had the FL or not

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -10,25 +10,28 @@
 
 <MudContainer MaxWidth="MaxWidth.False" Class="mt-16 px-8">
     <MudGrid>
+        <MudItem xs="12">
+            <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
+                <MudText Typo="Typo.h3">SimTECH</MudText>
+            </MudPaper>
+        </MudItem>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
+            <MudPaper Elevation="5" MinHeight="100px" Class="pa-4">
 
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6" md="4">
-            <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
-                <MudStack Row="true" Justify="Justify.Center" AlignItems="AlignItems.Center">
-                    <MudText Typo="Typo.h2" Class="ma-auto">SimTECH</MudText>
-                </MudStack>
+            <MudPaper Elevation="5" MinHeight="100px" Class="pa-4">
+
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="12" md="4">
-            <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
+            <MudPaper Elevation="5" MinHeight="100px" Class="pa-4">
 
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
-            <MudPaper Elevation="2" Class="pa-4 mud-height-full">
+            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
                 <MudTable id="recent-race-table" Items="@recentRaces" Dense="true">
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Last races</MudText>
@@ -81,7 +84,7 @@
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
-            <MudPaper Elevation="2" Class="pa-4 mud-height-full">
+            <MudPaper Elevation="5" Class="pa-4 mud-height-full">
                 <MudTable T="Race" Items="@upcomingRaces" Dense="true">
                     <ToolBarContent>
                         <MudText Typo="Typo.h5">Upcoming races</MudText>
