--- a/SimTECH/SimTECH/Pages/Racing/Race.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Race.razor
@@ -104,7 +104,7 @@
                     <span class="smol-accent" style="@(ViewHelper.SetBackgroundColour(context.Colour))"></span>
                 </MudTd>
                 <MudTd Class="overflow-hider">
-                    <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center">
+                    <MudStack Row="true" Spacing="1" AlignItems="AlignItems.Center" Class="pa-0">
                         <MudText Typo="Typo.body1">@context.FirstName</MudText>
                         <MudText Typo="Typo.button" Class="fontsize-button-text">@context.LastName</MudText>
                         @if (context.HasFastestLap)
