--- a/SimTECH/SimTECH/Pages/Test.razor
+++ b/SimTECH/SimTECH/Pages/Test.razor
@@ -35,16 +35,16 @@
                 </MudItem>
                 <MudItem xs="12" sm="6">
                     <MudPaper Elevation="2" MinHeight="200px" Class="pa-4">
-                        <MudText Typo="Typo.h5">Examples</MudText>
-                        <div>
-                            <!-- Local storage value -->
-                            <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">
-                                Set local stored info
-                            </MudButton>
-                            <MudText>@exampleStore</MudText>
-                        </div>
-                        <MudText Typo="Typo.overline">Custom emblems</MudText>
-                        <MudStack Row="true">
+                        <MudStack>
+                            <MudText Typo="Typo.h5">Examples</MudText>
+                            <div>
+                                <!-- Local storage value -->
+                                <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">
+                                    Set local stored info
+                                </MudButton>
+                                <MudText>@exampleStore</MudText>
+                            </div>
+                            <MudText Typo="Typo.overline">Custom emblems</MudText>
                             <Emblem Icon="@IconCollection.Polygon" Colour="#49f2e7" Accent="#bf34fa" />
                         </MudStack>
                     </MudPaper>
