--- a/SimTECH/SimTECH/Pages/Legacy.razor
+++ b/SimTECH/SimTECH/Pages/Legacy.razor
@@ -1,21 +1,48 @@
 ﻿@page "/legacy"
 @inject BreadcrumbProvider _bread
 
-<MudContainer>
-    <MudGrid>
-        <MudItem xs="4">
-            <MudText>Placeholder</MudText>
-        </MudItem>
-        <MudItem xs="4">
-            <MudText>Placeholder</MudText>
-        </MudItem>
-        <MudItem xs="4">
-            <MudText>Placeholder</MudText>
-        </MudItem>
-    </MudGrid>
+<MudContainer MaxWidth="MaxWidth.ExtraLarge">
+    <MudPaper>
+        <MudGrid Spacing="1">
+            <MudItem xs="12">
+                <MudPaper Elevation="15" Height="75px" Class="d-flex flex-column justify-center align-center pa-4">
+                    <MudText Typo="Typo.h3">Legacy leaderboard</MudText>
+                </MudPaper>
+            </MudItem>
+            @foreach (var leaderboard in legacyLeaderboards)
+            {
+                <MudItem xs="4">
+                    <MudPaper Elevation="15">
+                        <MudTable T="LegacySimData" Items="@leaderboard.Value.OrderBy(e => e.Rank)">
+                            <ToolBarContent>
+                                <MudText Typo="Typo.h5">@leaderboard.Key</MudText>
+                            </ToolBarContent>
+                            <HeaderContent>
+                                <MudTh>Rank</MudTh>
+                                <MudTh>Driver</MudTh>
+                                <MudTh>Value</MudTh>
+                            </HeaderContent>
+                            <RowTemplate>
+                                <MudTd>@context.Rank</MudTd>
+                                <MudTd>
+                                    <MudStack Row="true" Justify="Justify.SpaceBetween" AlignItems="AlignItems.Center" Class="pa-0">
+                                        <MudText>@context.Name</MudText>
+                                        <CountryFlag Code="@context.Country" Size="FlagSize.Small" />
+                                    </MudStack>
+                                </MudTd>
+                                <MudTd>@context.Value</MudTd>
+                            </RowTemplate>
+                        </MudTable>
+                    </MudPaper>
+                </MudItem>
+            }
+        </MudGrid>
+    </MudPaper>
 </MudContainer>
 
 @code {
+    private Dictionary<string, LegacySimData[]> legacyLeaderboards = Constants.LegacyLeaderboards;
+    
     protected override void OnInitialized()
     {
         _bread.SetBreadcrumbs(new List<BreadcrumbItem>()
