--- a/SimTECH/SimTECH/Shared/NavMenu.razor
+++ b/SimTECH/SimTECH/Shared/NavMenu.razor
@@ -22,7 +22,9 @@
 
     <MudNavLink Href="/stats" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.BarChart">Stats</MudNavLink>
 
-    <MudNavLink Href="/test" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
+    <MudNavLink Href="/legacy" Match="NavLinkMatch.Prefix" Icon="@IconCollection.Planet">Legacy</MudNavLink>
+
+    <MudNavLink Href="/test" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
 
     @*<MudNavGroup Title="Test" Icon="@IconCollection.Pyramid" @bind-Expanded="@testExpanded">
         <MudNavLink Href="/test" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Lightbulb">Test</MudNavLink>
